<?xml version="1.0"?>
<package format="2">
  <name>r2d3_control</name>
  <version>0.0.1</version>
  <description>ROS nodes to control dome, LEDs and motors for R2D3</description>
  <maintainer email="pi@example.com">pi</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
